--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <!-- call to action  -->
 <section class="cta">
     <h1>Enroll Now Online From Anywhere In The <br> The World</h1>
-    <a class="hero_button" href="">CONATCT US</a>
+    <a class="hero_button" href="contact.html">CONATCT US</a>
 </section>
 
 <!-- ------footer------>
